--- a/pages/activity/content/content.wxml
+++ b/pages/activity/content/content.wxml
@@ -2,7 +2,7 @@
 <import src="../../../wxParse/wxParse.wxml" />
 <view class='content'>
   <view class="head">
-    <text>{{content.TITLE}}</text>
+    <text style='font-weight: bold;font-size:18px;'>{{content.TITLE}}</text>
   </view>
   <view class="heads">
     <text class="text1">编辑：铭邦小哥</text>　|　
