--- a/pages/analog/result/content/content.wxml
+++ b/pages/analog/result/content/content.wxml
@@ -1,7 +1,7 @@
 <!-- 模拟填报结果详情页 -->
 <view class="page_bd">
     <view class="banner">
-      <image src='/images/tb.jpg'></image>
+      <image src='{{src}}'></image>
     </view>
     <view class="top">
       <view class="top-left">
