--- a/pages/register/register.wxml
+++ b/pages/register/register.wxml
@@ -9,7 +9,7 @@
                 <view class="weui-label">手机号</view>
             </view>
             <view class="weui-cell__bd">
-                <input number class="weui-input" placeholder="请输入 11 位手机号" name="PHONE" bindinput='inputPhone' maxlength='16'/>
+                <input number class="weui-input" placeholder="请输入 11 位手机号" name="PHONE" bindinput='inputPhone' maxlength='11'/>
             </view>
         </view>
         <view class="weui-cell weui-cell_input weui-cell_vcode">
@@ -40,7 +40,7 @@
                 <view class="weui-label">城市</view>
             </view>
             <view class="weui-cell__bd">
-                <picker bindchange="bindCountryChange1" value="{{index}}" range="{{city}}" range-key='NAME'>
+                <picker bindchange="bindCountryChange1" value="{{index}}" name='CITY' range="{{city}}" range-key='NAME'>
                     <view class="weui-select weui-select_in-select-after">{{thisCity.NAME}}</view>
                 </picker>
             </view>
@@ -50,7 +50,7 @@
                 <view class="weui-label">区域</view>
             </view>
             <view class="weui-cell__bd">
-                <picker bindchange="bindCountryChange2" value="{{index}}" range="{{county}}"  range-key='NAME'>
+                <picker bindchange="bindCountryChange2" value="{{index}}" name='REGION' range="{{county}}"  range-key='NAME'>
                     <view class="weui-select weui-select_in-select-after">{{thisCounty.NAME}}</view>
                 </picker>
             </view>
@@ -60,7 +60,7 @@
                 <view class="weui-label">学校</view>
             </view>
             <view class="weui-cell__bd">
-                <picker bindchange="bindCountryChange3" value="{{index}}" range="{{school}}"  range-key='NAME'>
+                <picker bindchange="bindCountryChange3" value="{{index}}" name='SCHOOL' range="{{school}}"  range-key='NAME'>
                     <view class="weui-select weui-select_in-select-after">{{thisSchool.NAME}}</view>
                 </picker>
             </view>
@@ -81,7 +81,7 @@
           <view class="weui-cell__hd mb-leixing1">
             <view class="weui-label mb-leixing2">
             <text>考试类型</text>
-              <radio-group class="radio-group" bindchange="radioChange">
+              <radio-group class="radio-group" bindchange="radioChange" name='SUBJECT'>
                   <label class="xuanxiang">
                       <radio value="gjv044girc" id='checkbox1' name='MAJORTYPE'/>文科
                       <radio value="r6j4mh69be" id='checkbox2' name='MAJORTYPE'/>理科
@@ -90,12 +90,12 @@
             </view>
           </view>
         </view>
-        <view class="weui-cell weui-cell_select" name="s">
+        <view class="weui-cell weui-cell_select">
             <view class="weui-cell__hd weui-cell__hd_in-select-after">
                 <view class="weui-label">考试年份</view>
             </view>
             <view class="weui-cell__bd">
-                <picker bindchange="selYear" value="{{index}}" range="{{year}}" range-key='val'>
+                <picker bindchange="selYear" value="{{index}}" name='YEAR' range="{{year}}" range-key='val'>
                     <view class="weui-select weui-select_in-select-after">{{thisYear.val}}</view>
                 </picker>
             </view>
