--- a/pages/table/table.wxml
+++ b/pages/table/table.wxml
@@ -1,90 +1,101 @@
 <!--pages/table/table.wxml-->
 <!-- 一分一档表 -->
-<view style='width:100%;height: 300rpx;'>
-  <image src='{{consultation}}' style="width: 100%;height: 100%;"></image>
-</view>
-<view class="page">
-    <view class="page__bd">
-      <view class="weui-search-bar">
-          <view class="weui-search-bar__form">
-              <view class="weui-search-bar__box">
-                  <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
-                  <input type="text" class="weui-search-bar__input" placeholder="搜索" value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping" />
-                  <view class="weui-icon-clear" wx:if="{{inputVal.length > 0}}" bindtap="clearInput">
-                      <icon type="clear" size="14"></icon>
-                  </view>
-              </view>
-              <label class="weui-search-bar__label" hidden="{{inputShowed}}" bindtap="showInput">
-                  <icon class="weui-icon-search" type="search" size="14"></icon>
-                  <view class="weui-search-bar__text">搜索</view>
-              </label>
-          </view>
-           <!-- <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>  -->
-           <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="setSearchStorage">搜索</view>
-      </view>
-      <view class="top">
-        <view class='top-left'>
-          <text class='region'>河北省</text>
-        </view>
-         <view class='top-right' > 
-          <picker bindchange="bindPickerChange" class='year'  value="{{index}}" range="{{array}}">
-            <view class="date">
-              <text>{{array[index]}}</text>
-              <image class='down' src="/images/triangle.png"></image>
+  <view style='width:100%;height: 300rpx;'>
+    <image src='{{consultation}}' style="width: 100%;height: 100%;"></image>
+  </view>
+  <view class="page">
+      <view class="page__bd">
+        <view class="weui-search-bar">
+            <view class="weui-search-bar__form">
+                <view class="weui-search-bar__box">
+                    <icon class="weui-icon-search_in-box" type="search" size="14"></icon>
+                    <input type="text" class="weui-search-bar__input" placeholder="搜索" value="{{inputVal}}" focus="{{inputShowed}}" bindinput="inputTyping" />
+                    <view class="weui-icon-clear" wx:if="{{inputVal.length > 0}}" bindtap="clearInput">
+                        <icon type="clear" size="14"></icon>
+                    </view>
+                </view>
+                <label class="weui-search-bar__label" hidden="{{inputShowed}}" bindtap="showInput">
+                    <icon class="weui-icon-search" type="search" size="14"></icon>
+                    <view class="weui-search-bar__text">搜索</view>
+                </label>
             </view>
-          </picker>
-         </view>  
-      </view>
-      <view class='content'>
-        <view class="weui-tab">
-          <view class="weui-navbar">
-              <block wx:for="{{tabs}}" wx:key="*this" wx:for-item="tab">
-                  <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
-                      <view class="weui-navbar__title">{{tab}}</view>
-                  </view>
-              </block>
+            <!-- <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="hideInput">取消</view>  -->
+            <view class="weui-search-bar__cancel-btn" hidden="{{!inputShowed}}" bindtap="setSearchStorage">搜索</view>
+        </view>
+        <view class="top">
+          <view class='top-left'>
+            <text class='region'>河北省</text>
           </view>
-          <view class="weui-tab__panel" >
-              <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
-                <view class="weui-flex {{color ? 'color': 'colors'}}">
-                  <view class="weui-flex__item border"><view class="placeholder">分数</view></view>
-                  <view class="weui-flex__item"><view class="placeholder">人数</view></view>
-                  <view class="weui-flex__item border"><view class="placeholder">位次</view></view>
-                  
-                </view>
-                <view class="weui-flex underline" wx:for="{{grade}}" wx:key="">     
-                <view class="weui-flex__item" wx:if="{{index == 0}}"><view class="placeholder">{{item.SCORE}}{{text ? '分及以上':''}}</view></view>
-                  <view class="weui-flex__item" wx:else><view class="placeholder">{{item.SCORE}}</view></view>
-                  
-                  <view class="weui-flex__item"><view class="placeholder">{{item.COUNT}}人</view></view>
-                  <view class="weui-flex__item"><view class="placeholder">{{item.TOTALCOUNT-item.COUNT+1}}~{{item.TOTALCOUNT}}</view></view>
-                </view>
+          <view class='top-right' > 
+            <picker bindchange="bindPickerChange" class='year'  value="{{index}}" range="{{array}}">
+              <view class="date">
+                <text>{{array[index]}}</text>
+                <image class='down' src="/images/triangle.png"></image>
               </view>
-              <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
-                <view class="weui-flex {{color ? 'color': 'colors'}}">
-                  <view class="weui-flex__item border"><view class="placeholder">分数</view></view>
-                  
-                  <view class="weui-flex__item"><view class="placeholder">人数</view></view>
-                  <view class="weui-flex__item border"><view class="placeholder">位次</view></view>
-                </view>
-                <view class="weui-flex underline" wx:for="{{grade}}" wx:key="">
+            </picker>
+          </view>  
+        </view>
+        <view class='content'>
+          <view class="weui-tab">
+            <view class="weui-navbar">
+                <block wx:for="{{tabs}}" wx:key="*this" wx:for-item="tab">
+                    <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
+                        <view class="weui-navbar__title">{{tab}}</view>
+                    </view>
+                </block>
+            </view>
+            <view class="weui-tab__panel" >
+                <view class="weui-tab__content" hidden="{{activeIndex != 0}}">
+                  <view class="weui-flex {{color ? 'color': 'colors'}}">
+                    <view class="weui-flex__item border"><view class="placeholder">分数</view></view>
+                    <view class="weui-flex__item"><view class="placeholder">人数</view></view>
+                    <view class="weui-flex__item border"><view class="placeholder">位次</view></view>
+                    
+                  </view>
+                  <view class="weui-flex underline" wx:for="{{grade}}" wx:key="">     
                   <view class="weui-flex__item" wx:if="{{index == 0}}"><view class="placeholder">{{item.SCORE}}{{text ? '分及以上':''}}</view></view>
-                  <view class="weui-flex__item" wx:else><view class="placeholder">{{item.SCORE}}</view></view>
-                  
-                  <view class="weui-flex__item"><view class="placeholder">{{item.COUNT}}人</view></view>
-                  <view class="weui-flex__item"><view class="placeholder">{{item.TOTALCOUNT-item.COUNT+1}}~{{item.TOTALCOUNT}}</view></view>
+                    <view class="weui-flex__item" wx:else><view class="placeholder">{{item.SCORE}}</view></view>
+                    
+                    <view class="weui-flex__item"><view class="placeholder">{{item.COUNT}}人</view></view>
+                    <view class="weui-flex__item"><view class="placeholder">{{item.TOTALCOUNT-item.COUNT+1}}~{{item.TOTALCOUNT}}</view></view>
+                  </view>
                 </view>
-              </view>
+                <view class="weui-tab__content" hidden="{{activeIndex != 1}}">
+                  <view class="weui-flex {{color ? 'color': 'colors'}}">
+                    <view class="weui-flex__item border"><view class="placeholder">分数</view></view>
+                    
+                    <view class="weui-flex__item"><view class="placeholder">人数</view></view>
+                    <view class="weui-flex__item border"><view class="placeholder">位次</view></view>
+                  </view>
+                  <view class="weui-flex underline" wx:for="{{grade}}" wx:key="">
+                    <view class="weui-flex__item" wx:if="{{index == 0}}"><view class="placeholder">{{item.SCORE}}{{text ? '分及以上':''}}</view></view>
+                    <view class="weui-flex__item" wx:else><view class="placeholder">{{item.SCORE}}</view></view>
+                    
+                    <view class="weui-flex__item"><view class="placeholder">{{item.COUNT}}人</view></view>
+                    <view class="weui-flex__item"><view class="placeholder">{{item.TOTALCOUNT-item.COUNT+1}}~{{item.TOTALCOUNT}}</view></view>
+                  </view>
+                </view>
+            </view>
           </view>
         </view>
       </view>
+  </view>
+  <view class="weui-loadmore" hidden='{{!isLoadingMore}}'>
+      <view class="weui-loading"></view>
+      <view class="weui-loadmore__tips">正在加载</view>
+  </view>
+  <view class='white'></view>
+  <!-- <view class='backTop'>
+    <image src="/images/arrow.png" bindtap='backTop'></image>
+  </view> -->
+<view class="zan-dialog {{ showDialog ? 'zan-dialog--show' : '' }}">
+  <view class="zan-dialog__mask"/>
+  <view class="zan-dialog__container">
+    <view style='padding:100rpx; position:relative;'>
+    <view style='margin-top:-15px;'>
+      <text style='font-size:36rpx;'>点击<text style='color:#FB8608'>分享</text>至<text style='color:#FB8608'>家长群</text>或<text style='color:#FB8608'>同学群</text>即可去除弹窗。\n</text>
     </view>
+    <button open-type='share' class="weui-btn mini-btn" type="primary" style='width:40%;margin-top:110rpx;'>分享</button>
+    </view>
+  </view>
 </view>
-<view class="weui-loadmore" hidden='{{!isLoadingMore}}'>
-    <view class="weui-loading"></view>
-    <view class="weui-loadmore__tips">正在加载</view>
-</view>
-<view class='white'></view>
-<!-- <view class='backTop'>
-  <image src="/images/arrow.png" bindtap='backTop'></image>
-</view> -->
