--- a/pages/table/table.wxml
+++ b/pages/table/table.wxml
@@ -88,6 +88,7 @@
   <!-- <view class='backTop'>
     <image src="/images/arrow.png" bindtap='backTop'></image>
   </view> -->
+<!-- 自定义弹出框 -->
 <view class="zan-dialog {{ showDialog ? 'zan-dialog--show' : '' }}">
   <view class="zan-dialog__mask"/>
   <view class="zan-dialog__container">
