--- a/pages/intelligence/intelligence.wxml
+++ b/pages/intelligence/intelligence.wxml
@@ -58,7 +58,7 @@
     1、本系统提供高考志愿一键填报功能，不等同于实际的网上志愿填报。建议考生在填报志愿时，结合本系统的推荐来完善志愿表。
   </view>
   <view class="footer2">
-    2、您正在使用的是<text style='font-weight:bold;font-size:26rpx;color:red'>河北</text>考生志愿填报智能模拟系统，提供“普通类文理的本科一批、本科二批”的志愿一键填报功能，该功能数据主要来源于各省（市）教育考试院和各大学官网历年的招考录取人数据。
+    2、您正在使用的是<text style='font-weight:bold;'>河北</text>考生志愿填报智能模拟系统，提供“普通类文理的本科一批、本科二批”的志愿一键填报功能，该功能数据主要来源于各省（市）教育考试院和各大学官网历年的招考录取人数据。
   </view>
   <view class="footer2">
     3、当前版本使用的数据已经更新至2018年最新数据（其他数据陆续更新中）。
@@ -79,8 +79,8 @@
   <view class="zan-dialog__container">
     <view style='padding:100rpx; position:relative;'>
     <view style='margin-top:-15px;'>
-      <text>方法1：点击<text style='color:#FB8608'>分享</text>至<text style='color:#FB8608'>家长群</text>或<text style='color:#FB8608'>同学群</text>即可免费使用一次。\n</text>
-      <text>方法2：充值VIP即可无限次使用。</text>
+      <text>方法1：点击<text style='color:#FB8608'>分享</text>至<text style='color:#FB8608'>家长群</text>或<text style='color:#FB8608'>同学群</text>即可免费使用一次\n</text>
+      <text>方法2：成为VIP即可无限次使用</text>
     </view>
     <button bindtap="toggleDialog" open-type='share' class="weui-btn mini-btn" type="primary" style='width:40%;position: absolute;top:222rpx;right:30rpx;'>分享</button>
     <button bindtap="toggleDialog" class="weui-btn mini-btn" type="default" style='width:40%;position: absolute;top:222rpx;left:30rpx;'>取消</button>
