--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -93,7 +93,7 @@
       <view class="weui-flex__item">
         <view class="placeholder" style="height:100%;background-color:#0ddce4">
           <view class='adv_left'>
-            <text style="font-size:36rpx">2019年全国自主招生咨询会入口</text>
+            <text style="font-size:36rpx">2019年全国名校自主招生咨询会入口</text>
             <!-- <text>网络咨询招生办</text> -->
             <!-- <text>与你心仪大学的招办老师零距离沟通</text> -->
           </view>
