--- a/pages/consult/consult.wxml
+++ b/pages/consult/consult.wxml
@@ -58,7 +58,7 @@
           <text>入驻人数：{{sc.TEACOUNT}}人</text><text>地区：{{sc.PROVINCE_VALUE}}</text>
         </view>  -->
         <view class="weui-media-box__desc">
-          <image wx:for="{{sc.subjecttypes}}" wx:key="" class='icon-subjecttype' src="/images/icon/{{item.DIC_ID}}.png"></image>
+          <image wx:for="{{sc.subjecttypes}}" wx:key="" class='icon-subjecttype' src="/images/icon/{{item.DIC_ID}}.png"></image><text style='font-size:14px;color:#f00'>点击查看详情</text>
         </view>  
       </view>
     </view>
@@ -156,7 +156,7 @@
           <text>入驻人数：{{school.TEACOUNT}}人</text><text>地区：{{school.PROVINCE_VALUE}}</text>
         </view>
         <view class="weui-media-box__desc">
-          <image wx:for="{{school.subjecttypes}}" wx:key="" class='icon-subjecttype' src="/images/icon/{{item.DIC_ID}}.png"></image>
+          <image wx:for="{{school.subjecttypes}}" wx:key="" class='icon-subjecttype' src="/images/icon/{{item.DIC_ID}}.png"></image><text style='font-size:14px;color:#f00'>点击查看详情</text>
         </view>  
       </view>
     </view>
