--- a/pages/chatroom/chatroom.wxml
+++ b/pages/chatroom/chatroom.wxml
@@ -10,6 +10,9 @@
         </view>
     </view>
 <scroll-view scroll-y="true" class="scroll_view" class="{{ view }}" bindtap="cancelEmoji" scroll-into-view="{{ chatRecords.length > 0 ? 'rec_' + chatRecords[chatRecords.length - 1].REC_ID : '' }}"  >
+<view class="initial">
+  <text>欢迎咨询{{complete_info.NICKNAME}}</text>
+</view>
     <view class="message" wx:for="{{ chatRecords }}" wx:key="" id="rec_{{ item.REC_ID }}">
       <view class="main" class="{{ item.style }}">
         <view class="time">
