--- a/pages/chatroom/chatroom.wxss
+++ b/pages/chatroom/chatroom.wxss
@@ -37,6 +37,20 @@
   border-radius: 2px;
   background-color: #dcdcdc;
 }
+.initial {
+  margin: 10px 0;
+  text-align: center;
+}
+
+.initial text {
+  display: inline-block;
+  padding: 3px 10px 0 10px;
+  font-size: 12px;
+  color: #fff;
+  line-height: 14px;
+  border-radius: 2px;
+  background-color: #dcdcdc;
+}
 
 .user text {
   margin: auto auto 4px 0;
