--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -91,13 +91,13 @@
   <view class="page__bd page__bd_spacing" bindtap="advantage1">
     <view class="weui-flex">
       <view class="weui-flex__item">
-        <view class="placeholder" style="height:100%;background-color:#0ddce4">
+        <view class="placeholder" style="height:100%;background-color:#0ddce4;position: relative;">
           <view class='adv_left'>
-            <text style="font-size:36rpx;">2019年全国名牌大学<text style='color:#f00;'>自主招生</text>咨询会 <text style='margin-left:3px;color:#f00;background-color:#fff;padding:5rpx;border-radius: 10rpx;border: 1px solid #fff'>入口</text></text>
+            <text style="font-size:36rpx;">2019年全国名牌大学\n<text style='color:#f00;'>自主招生</text>咨询会 <text style='margin-left:3px;color:#f00;background-color:#fff;padding:5rpx;border-radius: 10rpx;border: 1px solid #fff'>入口</text></text>
             <!-- <text>网络咨询招生办</text> -->
             <!-- <text>与你心仪大学的招办老师零距离沟通</text> -->
           </view>
-          <view class='adv_right'>
+          <view class='adv_right gd_zzzs'>
             <image src="{{index_2}}" style="width:260rpx;height:260rpx"></image>
           </view>
         </view>
@@ -107,7 +107,7 @@
   <view class="page__bd page__bd_spacing" bindtap="advantage2">
     <view class="weui-flex">
       <view class="weui-flex__item">
-        <view class="placeholder" style="height:100%;background-color:#c070f2">
+        <view class="placeholder" style="height:100%;background-color:#ef3f3f">
           <view class='adv_left'>
             <text style="font-size:36rpx">2019年河北高职院校\n单招咨询会<text style='margin-left:60rpx;color:#f00;background-color:#fff;padding:5rpx;border-radius: 10rpx;border: 1px solid #fff'>入口</text></text>
             <!-- <text>网络咨询招生办</text> -->
