--- a/pages/chatroom/chatroom.wxss
+++ b/pages/chatroom/chatroom.wxss
@@ -41,7 +41,23 @@
   margin: 10px 0;
   text-align: center;
 }
-
+.greetings image{
+  margin-top: 15px;
+  margin-left: 10px;
+  float: left;
+  width: 32px;
+  height: 30px;
+}
+.greetings view{
+  margin: 15px 15px 10px 10px;
+  text-align: left;
+  float: left;
+  width: 65%;
+  padding: 3px 10px 0 10px;
+  font-size: 14px;
+  background-color: #B2E281;
+  border-radius: 5px;
+}
 .initial text {
   display: inline-block;
   padding: 3px 10px 0 10px;
