gd_个人中心会员身份显示问题(已解决)

--- a/pages/person/person.wxml
+++ b/pages/person/person.wxml
@@ -29,6 +29,7 @@
               <text class='vip-style' wx:elif="{{vip == '初级会员'}}">{{vip}} <text style='font-family:黑体'>></text></text>
               <text class='vip-style' wx:elif="{{vip == '体验版会员'}}">{{vip}} <text style='font-family:黑体'>></text></text>
               <text class='vip-style' wx:elif="{{vip == '预约专家'}}">{{vip}} <text style='font-family:黑体'>></text></text>
+              <text class='vip-style' wx:elif="{{vip == '高级体验会员'}}">{{vip}} <text style='font-family:黑体'>></text></text>
               <text class='vip-style' wx:else>普通用户 <text style='font-family:黑体'>></text></text>
             </view>
       </view>
