--- a/pages/login/login.wxml
+++ b/pages/login/login.wxml
@@ -12,7 +12,7 @@
                     <view class="weui-label">用户名</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input class="weui-input" placeholder="请输入手机号" bindinput="bindUsername"/>
+                    <input class="weui-input" placeholder="请输入手机号" maxlength='11' bindinput="bindUsername"/>
                 </view>
             </view>
             <view class="weui-cell weui-cell_input">
@@ -20,7 +20,7 @@
                     <view class="weui-label">密码</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input password class="weui-input" placeholder="请输入密码" bindinput="bindPassword"/>
+                    <input password class="weui-input" placeholder="请输入密码" maxlength='16' bindinput="bindPassword"/>
                 </view>
             </view>
         </view>
